compiler/tools/fpp-check/test/numeric_shift/shift_float_value_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/numeric_shift/shift_float_value_error.fpp:1.14
constant a = 1.5 << 2
             ^
error: F64 is not an integer or enum type
